2005/04/24  Nicolas Regnault:

* clean QHENBodyQuasiHoleOverlap. Now use new formula to evaluate overlap betwen two subspaces of dimensions > 1

* QHEOnSphereLzSortedSpectrum is now completed and working.

* add support (or prepare support) of on-disk cache for classes deriving from AbstractQHEOnSphereHamiltonian.

* QHEBosonsDelta has now support of on-disk cache.


2005/04/18  Nicolas Rgenault:

* still working on QHEOnSphereLzSortedSpectrum


2005/04/18  Nicolas Regnault:

* start adding QHEOnSphereLzSortedSpectrum class to solve problem due to degeneracy of input vectors in QHENBodyQuasiHoleOverlap


2005/04/15  Nicolas Regnault:

* start adding unprojected CF wave functions.


2005/04/13  Nicolas Regnault:

* on disk cache is now working for  AbstractQHEOnSphereNBodyInteractionHamiltonian


2005/04/08  Nicolas Regnault:

* fix a bug in AbstractOption that appears when using two option names with one one them is identical to the beginning of the second one

* add method in Architecture to get temporary file names

* start adding support of on-disk cache with some hamiltonian (allowing huge and not-so-sparse matrices)

* clean QHEBosonsFromGivenBasis


2005/04/01  Nicolas Regnault:

* correct misprint in BosonOnSphere

* add QHEBosonsFromGivenBasis to evaluate Hamiltonian in a subspce given by a bunch of vectors on disk.


2005/03/23  Nicolas Regnault:

* start adding support of polynomial with complex coefficients


2005/03/23  Nicolas Regnault:

* tridiagonalization algorithm for  RealBandDiagonalSymmetricMatrix if now working (tested against more than 2000 matrices with various sizes <= 500 and band sizes)

* FullReorthogonalizedBlockLanczosAlgorithm is now using RealBandDiagonalSymmetricMatrix instead of RealSymmetricMatrix


2005/03/23  Phuong Nguyen:

* Correct a typo mistake (???)


2005/03/21  Nicoas Regnault:

* working on tridiagonalization algorithm of RealBandDiagonalSymmetricMatrix


2005/03/18  Nicolas Regnault:
